fix: card overflowing in safari

--- a/src/components/SupportCardList/SupportCard/SupportCard.scss
+++ b/src/components/SupportCardList/SupportCard/SupportCard.scss
@@ -3,8 +3,7 @@
   aspect-ratio: 1/1.3;
 }
 .SupportCardWrapper {
-  display: inline-flex;
-  flex-direction: column;
+  display: grid;
   background: #8f8f8f22;
   border-radius: 10px;
   padding: 2px;
@@ -14,7 +13,6 @@
   @include hoverable;
   @include CardBackPanel;
   @include SupportCard;
-  display: grid;
   grid-template-rows: 0fr 0fr 1fr;
   &:focus {
     outline: unset;
