--- a/src/components/common/styles/Card.scss
+++ b/src/components/common/styles/Card.scss
@@ -14,6 +14,7 @@ $cardRadius: 7px;
   transition: transform 0.2s cubic-bezier(0.5, 0.13, 0.81, 0.44);
   align-self: center;
   justify-self: center;
+  overflow: hidden;
   cursor: pointer;
 
   @include keyframes(appearance) {
